--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Peddana&display=swap" rel="stylesheet">  
     <link href="/style.css" rel="stylesheet">
-    <title>Dorty Project</title>
+    <title>Dorty's Chocolate Delights</title>
 </head>
 <body>
   <div id="header-section">
