--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
   </section>
    
-  <footer class="p-5 mb-3">
+  <footer class="p-5">
     <div class="row p-3">
       <div class="col-md-4 text-white">
         <h4>DETAILS</h4>
@@ -77,7 +77,7 @@
       </div>
       <div class="col-md-4 text-white">
         <h4>INFO</h4>
-        <div class="d-flex flex-column mb-2">
+        <div class="d-flex flex-column">
          <p>Delivery</p>
          <p>Wholesale Inquiries</p>
          <p>FAQ</p>
