--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div><h2 class="text-center text-white">UNDER CONSTRUCTION</h2></div>
     </div>
   </section>
-   
+   <!--Footer-->
   <footer class="p-5">
     <div class="row p-3">
       <div class="col-md-4 text-white">
