--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link mr-4" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact_section">Get In touch</a>
+            <a class="nav-link" href="#contact_section">Contact</a>
           </li>
         </ul>
       </div>
