--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="col-md-6">
         <div class="display-flex flex-column p-4">
           <p id="header-text">
-            <span class="text-info">Hi there!</span> My name is Ian and am a
+            <span class="text-info">Hi there!</span> My name is Ian and I am a
             painter.Not the kind of
             <span class="text-warning">painter</span> you might be thinking of.
             I paint the <span style="color: palevioletred">internet</span>.
