--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   <div id="contact_form" class="container">
    <div class="card bg-white p-4">
     <h1 class="text-center">Contact</h1>
-     <form action="/myform.php" method="POST">
+     <form action="https://getform.io/f/144cab74-5f22-4112-a746-a42565e095e3" method="POST">
      <h2 id="header">Hi There!</h2>
      <div>
        <h4>I'm contacting you because</h4>
