--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
      <div>
        <h4>I'm contacting you because</h4>
        <select id="options" class="w-100">
-         <option value="i need a website">I need a website</option>
-         <option value="i need a web app">Am hiring</option>
+         <option value="i need a website" name="I need a website">I need a website</option>
+         <option value="i need a web app" name="Am hiring">Am hiring</option>
        </select>
      </div>
      <div class="mt-3">
        <h4>Reply to me at</h4>
-       <input type="text" placeholder="enter your email here" class="w-100" id="contact_text" name="email">
+       <input type="email" placeholder="enter your email here" class="w-100" id="contact_text" name="email">
      </div>
      <div class="mt-3">
        <h4>I promise not to give your email address to any of the simpsons<span><img src="/contact_img/icons8-bart-simpson-100.png" style="width: 50px;"></span></h4>
