--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!--Navigation section-->
-    <nav class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar navbar-expand-md navbar-light container">
       <a class="navbar-brand" href="index.html"
         ><div class="d-flex flex-column">
             <h5 id="nav-text">Ian</h5>
