--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="col-md-6" data-aos="zoom-in">
-        <img class="img-fluid" src="./abstract-list-is-empty.png" />
+        <img class="img-fluid" src="/IanMcbull.github.io/mirage-page-under-construction.png"/>
       </div>
 
     </section>
