--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="col-md-6" data-aos="zoom-in">
-        <img class="img-fluid" src="/IanMcbull.github.io/mirage-page-under-construction.png"/>
+        <img class="img-fluid" src="./mirage-page-under-construction_new.png" />
       </div>
 
     </section>
